<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/main_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <TextView
        android:id="@+id/course_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/S_letter"
        app:layout_constraintTop_toTopOf="@id/N_letter"
        />

    <TextView
        android:id="@+id/course_literal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cyan_main"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toTopOf="@+id/course_text_label"
        app:layout_constraintStart_toStartOf="@+id/course_text_label"
        />

    <ImageView
        android:id="@+id/plane_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plane_icon"
        />

    <TextView
        android:id="@+id/N_letter"
        android:text="@string/N"
        style="@style/CompassLetter"
        app:layout_constraintBottom_toTopOf="@+id/plane_view"
        app:layout_constraintEnd_toEndOf="@+id/plane_view"
        app:layout_constraintStart_toStartOf="@+id/plane_view"
        />

    <TextView
        android:id="@+id/W_letter"
        android:text="@string/W"
        style="@style/CompassLetter"
        app:layout_constraintTop_toTopOf="@+id/plane_view"
        app:layout_constraintBottom_toBottomOf="@+id/plane_view"
        app:layout_constraintEnd_toStartOf="@+id/plane_view"
        />

    <TextView
        android:id="@+id/S_letter"
        android:text="@string/S"
        style="@style/CompassLetter"
        app:layout_constraintEnd_toEndOf="@+id/plane_view"
        app:layout_constraintStart_toStartOf="@+id/plane_view"
        app:layout_constraintTop_toBottomOf="@+id/plane_view"
        />

    <TextView
        android:id="@+id/E_letter"
        android:text="@string/E"
        style="@style/CompassLetter"
        app:layout_constraintTop_toTopOf="@+id/plane_view"
        app:layout_constraintBottom_toBottomOf="@+id/plane_view"
        app:layout_constraintStart_toEndOf="@+id/plane_view"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <!--Need to nest OverlayView in FrameLayout because,
   I need to capture content of card defined in ConstraintLayout, blur it and hide. -->
  <kniezrec.com.flightinfo.cards.overlay.OverlayView
      android:id="@+id/overlay_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      />

</FrameLayout>