<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kniezrec.com.flightinfo.cards.route.FindCityActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

  <androidx.cardview.widget.CardView
      android:id="@+id/map_container"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="@dimen/default_margin"
      android:layout_marginEnd="@dimen/default_margin"
      android:layout_marginBottom="@dimen/small_margin"
      app:cardCornerRadius="@dimen/card_radius"
      app:layout_constraintBottom_toTopOf="@id/confirm_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/info_label"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple_dark"
        >

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_disambiguationCities"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight=".65"
          android:visibility="gone"
          android:layout_marginBottom="@dimen/small_margin"
          android:background="@color/purple_main"
          />

      <kniezrec.com.flightinfo.base.BaseMapView
          android:id="@+id/map_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight=".35"
          />

    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/city_name_input_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_margin"
      android:layout_marginEnd="@dimen/default_margin"
      android:hint="@string/city_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/search_button"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/city_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionSearch"
        style="@style/EditTextStyle"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/info_label"
      android:text="@string/find_city_info_label"
      android:layout_width="0dp"
      style="@style/TextLabel"
      app:layout_constraintTop_toBottomOf="@+id/city_name_input_layout"
      app:layout_constraintBottom_toTopOf="@+id/map_container"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="@dimen/default_margin"
      android:gravity="center"
      />

  <Button
      android:id="@+id/confirm_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/default_margin"
      android:layout_marginStart="@dimen/default_margin"
      android:layout_marginEnd="@dimen/default_margin"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:text="@string/confirm"
      style="@style/Button"
      android:enabled="false"
      />

  <Button
      android:id="@+id/search_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="@dimen/default_margin"
      app:layout_constraintTop_toTopOf="parent"
      android:text="@string/search"
      android:layout_marginTop="@dimen/default_margin"
      style="@style/Button"
      android:enabled="false"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
